Performance enhancements